<resources>
    <string name="app_name">ProjectFirst04</string>

    <string name="net_complete">网络请求完成：</string>

    <string name="net_error">网络请求错误：</string>

    <string name="net_code">接口标识：</string>

    <string name="loading">正在加载</string>

    <string name="no_more_data">没有更多数据了</string>

    <string name="loading_on">加载中</string>

    <string name="phone_is_wrong">手机号错误</string>

    <string name="verify_is_wrong">验证码错误</string>

    <string name="please_read">请阅读协议和条款</string>

    <string name="login_qq">qq登录</string>

    <string name="login_wechat">微信登录</string>

    <string name="login_sina">新浪登录</string>

    <string name="upload_photo">上传头像</string>

    <string name="please_input_nickname">请输入昵称</string>

    <string name="jump">跳过</string>

    <string name="cancel">取消</string>

    <string name="be_null">信息为空</string>

    <string name="nick_be_null">昵称或头像为空</string>

    <string name="confirm_to_use_default_name">确认使用默认用户名</string>

    <string name="confirm">确认</string>

    <string name="photo">相册</string>

    <string name="infomation">发现</string>

    <string name="talk">话题</string>

    <string name="circle">沟通</string>

    <string name="mine">我的</string>

    <string name="camera">拍照</string>

    <string name="agree_text2">\"隐私条款\"</string>

    <string name="agree_text1">\"用户协议\"</string>

    <string name="msg_radio">消息</string>

    <!-- TODO: Remove or change this placeholder text -->


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="add_live_text">开直播</string>

    <string name="add_video_text">拍视屏</string>

    <string name="live_add_text">封面</string>

    <string name="live_invite_text">呼唤小伙伴来看</string>

    <string name="live_agreement_text">开通默认同意遵守</string>

    <string name="live_agreements_text">\《XX直播管理条款》</string>

    <string name="live_start_text">开启直播</string>

    <!-- TODO： TODO 今天第一次使用 登录页面所需-->

    <string name="chat_my">\@我的</string>
    <string name="home_pop_call_text">连麦200/5分钟</string>




    <!-- TODO： TODO 今天第一次使用  登录页面所需-->
    <string name="login_phone">请输入手机号</string>
    <string name="login_psw">请输入密码</string>
    <string name="login_login">登录</string>
    <string name="login_noAccountnumber">没有账号?</string>
    <string name="login_NowRegisiter">立即注册</string>
    <string name="login_forgetPsw">忘记密码</string>
    <string name="login_Otherlogin">----------------其它方式登录----------------</string>
    <string name="login_agree">我同意</string>
    <string name="title_activity_particular">ParticularActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>


>>>>>>> 08893016b5146588e02a91cd1e38da515f9936c1
</resources>
