<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.LoginActivity">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/logo_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="142dp"
        tools:layout_editor_absoluteY="83dp" />

    <ImageView
        android:layout_width="@dimen/dp_20"
        android:layout_height="@dimen/dp_20"

        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="270dp" />

    <ImageView
        android:layout_width="@dimen/dp_20"
        android:layout_height="@dimen/dp_20"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="321dp" />

    <EditText
        android:id="@+id/login_phone"
        android:layout_width="@dimen/dp_220"
        android:layout_height="wrap_content"
        android:hint="@string/login_phone"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="257dp" />

    <EditText
        android:id="@+id/login_psw"
        android:layout_width="@dimen/dp_220"
        android:layout_height="wrap_content"
        android:hint="@string/login_psw"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="311dp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="@dimen/dp_260"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/login_login"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="368dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_noAccountnumber"
        android:textSize="16sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="426dp" />

    <TextView
        android:id="@+id/login_regisiter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_NowRegisiter"
        android:textColor="@color/blue_theme"
        android:textSize="16sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="426dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_forgetPsw"
        android:textSize="16sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="276dp"
        tools:layout_editor_absoluteY="426dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:text="@string/login_Otherlogin"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="66dp"
        tools:layout_editor_absoluteY="475dp" />

    <ImageView
        android:id="@+id/wechat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/wechat_image"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="66dp"
        tools:layout_editor_absoluteY="501dp" />

    <ImageView
        android:id="@+id/login_qq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/qq_image"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="155dp"
        tools:layout_editor_absoluteY="501dp" />

    <ImageView
        android:id="@+id/login_sina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sina_image"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="248dp"
        tools:layout_editor_absoluteY="501dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_agree"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="562dp" />

</android.support.constraint.ConstraintLayout>