<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeActivity_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <View
        android:id="@+id/bottom_cutLine"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0_1"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/radio_group" />

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintBottom_toTopOf="@+id/bottom_cutLine"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <RadioGroup

        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_theme"
        android:clipChildren="false"
        android:orientation="horizontal"
        android:padding="@dimen/dp_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <RadioButton
            android:id="@+id/home_rb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:button="@null"
            android:drawableTop="@drawable/tab_hemo_bg"
            android:drawablePadding="@dimen/dp_3"
            android:gravity="center"
            android:text="@string/infomation"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12" />

        <RadioButton
            android:id="@+id/talk_rb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:button="@null"
            android:drawableTop="@drawable/tab_matching_bg"
            android:drawablePadding="@dimen/dp_3"
            android:gravity="center"
            android:text="@string/talk"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12" />


        <RadioButton
            android:id="@+id/circle_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:background="@null"
            android:button="@null"
            android:drawableTop="@drawable/tab_add">

        </RadioButton>


        <RadioButton
            android:id="@+id/massage_rb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:button="@null"
            android:drawableTop="@drawable/tab_chat_bg"
            android:drawablePadding="@dimen/dp_3"
            android:gravity="center"
            android:text="@string/msg_radio"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12" />

        <RadioButton
            android:id="@+id/mine_rb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:button="@null"
            android:drawableTop="@drawable/tab_mine_bg"
            android:drawablePadding="@dimen/dp_2"
            android:gravity="center"
            android:text="@string/mine"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12" />

    </RadioGroup>


</android.support.constraint.ConstraintLayout>